# rs-autofixture

./: Cargo.toml  LICENSE  README.md
autofixture/: Cargo.toml
autofixture/src/: lib.rs
autofixture/src/fixture/: auto_fixture.rs  builder.rs  mod.rs
autofixture/src/fixture/builder/: mod.rs
autofixture/src/fixture/builder/conditions/: general.rs  mod.rs  numeric.rs  option.rs
autofixture/src/fixture/collections/: iter.rs  mod.rs  str.rs  tuple.rs
autofixture/src/fixture/primitives/: bool.rs  char.rs  floating_point.rs  mod.rs  option.rs  result.rs  signed.rs  std_option.rs  std_result.rs  unit_type.rs  unsigned.rs
autofixture_derive/: Cargo.toml
autofixture_derive/src/: lib.rs
autofixture_macro/: Cargo.toml
