[package]
name = "rs-autofixture"
version = "0.1.0"
edition = "2024"

[features]
derive = ["rs-autofixture-derive"]
nightly-float = []
double-tuples = []
tripple-tuples = ["double-tuples"]

[dependencies]
rs-autofixture-derive = { path = "../autofixture_derive", optional = true }
num-traits = "0.2"
paste = "1.0"
rand = "0.10"
uuid = { version = "1.0", features = ["v4"] }
